# astrodating

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  mypy.ini  pyproject.toml  tox.ini  vslpyexamples.ipynb
.github/workflows/: manual.yml
astrodating/: __init__.py  chronology.py  eclipses.py  formats.py  heliacalrising.py  lunar.py  planets.py
licenses/: PYTHON.rst  README.rst
src/: vsl.py
vslpy/: __init__.py  _version.py  vsl.py
vslpy/tests/: test_vsl.py  test_vslpy.py
