[build-system]
requires = ["setuptools >= 69.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "vslpy/_version.py"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes. "E" + "W" + "F" + "C90" (mccabe complexity) is equivalent to flake8
    "I", # isort
]

[project]
name = "vslpy"
#version = "v0.0.1-beta"
dynamic = ["version"]
dependencies = [
  "astropy>6.1.2"
]
requires-python = ">=3.10"
authors = [
  {name = "Frank Hubeny", email = "frankhubeny@protonmail.com"},
]
maintainers = [
  {name = "Frank Hubeny", email = "frankhubeny@protonmail.com"}
]
description = "Variable Speed of Light Cosmologies"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["variable", "speed of light", "cosmology"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD-3-Clause",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics"
]

[project.optional-dependencies]
#gui = ["PyQt5"]
#cli = [
#  "rich",
#  "click",
#]

[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/FrankHubeny/vslpy.git"
"Bug Tracker" = "https://github.com/FrankHubeny/vslpy/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
#spam-cli = "spam:main_cli"

[project.gui-scripts]
#spam-gui = "spam:main_gui"

[project.entry-points."spam.magical"]
#tomatoes = "spam:main_tomatoes"